	  - PGSQL_DIAG_TABLE_NAME
	  - PGSQL_DIAG_COLUMN_NAME
	  - PGSQL_DIAG_DATATYPE_NAME
	  - PGSQL_DIAG_CONSTRAINT_NAME
	- Requires Postgres 9.6
	  - PGSQL_DIAG_SEVERITY_NONLOCALIZED

- phar:
  . Fixed bug #74991 (include_path has a 4096 char limit in some cases).
    (bwbroersma)
  . Fixed bug #65414 (deal with leading slash when adding files correctly).
    (bishopb)

- Session:
  . Fixed bug #74941 (session fails to start after having headers sent). 
    (morozov)

- SimpleXML:
  . Fixed bug #54973 (SimpleXML casts integers wrong). (Nikita)

- SOAP:
  . Fixed bug #75464 (Wrong reflection on SoapClient::__setSoapHeaders). (villfa)
  . Fixed bug #70469 (SoapClient generates E_ERROR even if exceptions=1 is
    used). (Anton Artamonov)

- SPL:
  . Fixed bug #74977 (Appending AppendIterator leads to segfault). 
    (Andrew Nester)
  . Fixed bug #75173 (incorrect behavior of AppendIterator::append in foreach
    loop). (jhdxr)
  . Fixed bug #74372 (autoloading file with syntax error uses next autoloader,
    may hide parse error). (Nikita)
  . Fixed bug #75878 (RecursiveTreeIterator::setPostfix has wrong signature).
    (cmb)
  . Fixed bug #74519 (strange behavior of AppendIterator). (jhdxr)

- SQLite3:
  . Updated bundled libsqlite to 3.22.0. (cmb)

- Standard:
  . Added is_countable() function. (Gabriel Caruso)
  . Fixed bug #75916 (DNS_CAA record results contain garbage). (Mike, 
    Philip Sharp)
  . Fixed unserialize(), to disable creation of unsupported data structures
    through manually crafted strings. (Dmitry)
  . Fixed bug #75409 (accept EFAULT in addition to ENOSYS as indicator 
    that getrandom() is missing). (sarciszewski)
  . Fixed bug #74719 (fopen() should accept NULL as context). (Alexander Holman)
  . Fixed bug #69948 (path/domain are not sanitized in setcookie). (cmb)

- Testing:
  . Implemented request #62055 (Make run-tests.php support --CGI-- sections).
    (cmb)

- Tidy: