@@ -16,10 +16,14 @@ var_dump(readline_info('readline_name', 1));
 var_dump(readline_info('readline_name'));
 var_dump(readline_info('attempted_completion_over',1));
 var_dump(readline_info('attempted_completion_over'));
+var_dump(readline_info('completion_append_character', "\0"));
+var_dump(readline_info('completion_append_character'));
+var_dump(readline_info('completion_suppress_append', true));
+var_dump(readline_info('completion_suppress_append'));
 
 ?>
 --EXPECTF--
-array(11) {
+array(13) {
   ["line_buffer"]=>
   string(0) ""
   ["point"]=>
@@ -36,6 +40,10 @@ array(11) {
   string(0) ""
   ["terminal_name"]=>
   string(0) ""
+  ["completion_append_character"]=>
+  string(1) " "
+  ["completion_suppress_append"]=>
+  bool(false)
   ["library_version"]=>
   string(%d) "%s"
   ["readline_name"]=>
@@ -51,3 +59,7 @@ string(5) "other"
 string(1) "1"
 int(0)
 int(1)
+string(1) " "
+string(0) ""
+bool(false)
+bool(true)
